--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-<html><head>nothing</head><body bgcolor="grey"><h1>hello</h1></body></html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Events</title>
+        <link rel="icon" href="img/date.png"
+
+    </head>
+
+    <body bgcolor="black" style="color: white;">
+        <center>
+            <h1>Upcoming events 📅</h1>
+            <p>Don't miss any of your updated events. Stay updated</p>
+        </center>
+        <hr>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In, pariatur modi delectus veniam error ut! Velit, quo fugiat! Unde fugiat doloribus veniam, iure voluptate temporibus fuga reprehenderit tempore obcaecati nostrum, iusto alias quaerat nihil in eaque. Ex doloribus voluptatem nulla ut doloremque autem tempora voluptatum similique. Similique saepe amet corporis tempora facilis perferendis quaerat blanditiis mollitia, possimus labore ratione distinctio debitis pariatur perspiciatis, vel delectus maiores animi. Saepe consequuntur expedita vitae, explicabo necessitatibus nesciunt! Iusto rem atque nisi consectetur dolor qui nobis maxime, reprehenderit libero. Quia quas iusto rerum, aliquid ipsum, eos rem commodi, corporis sequi autem nostrum deleniti explicabo.
+        </p>
+        <center>
+        <img src="img/event1.png">
+        <h1>Photo Gallery Event</h1>
+        <h2> Free entry | Free food | Pets are not allowed</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus sint error accusantium ullam commodi iure est nobis quis totam dolore aut minima maiores veniam consequatur, vel aliquid laborum quos repudiandae. Est eos similique, commodi aperiam nihil exercitationem, maiores tenetur ratione, dolore corrupti doloremque totam praesentium minus officia unde asperiores excepturi!
+        </p>
+        <img src="img/event2.png"
+        </center>
+
+        <center>
+            <h1>
+                <a href="https://www.myntra.com/">Fashion store</a>
+            </h1>
+            <h2>Free entry | Free food | Pets are not allowed</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo odio eum dolore error dolor velit officia architecto nemo quaerat quas et, aut esse laboriosam asperiores aspernatur fuga minus incidunt id enim quasi quam? Ipsam aperiam recusandae commodi aliquid repellendus consequuntur inventore nam laborum deleniti incidunt. Voluptates impedit libero soluta distinctio.
+            </p>
+        </center>
+
+        <hr>
+        <center>
+            <h1>Contact</h1>
+            <h2>+91 787483783743 | eventcollab@gmail.com</h2>
+            <p>
+                9th street Avenue Park, Trichy, 625620
+            </p>
+        </center>
+
+    </body>
+</html>
